--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <!-- Full Page Image Header with Vertically Centered Content -->
   <header class="masthead">
   <div class="nav-wrapper">
-    <h1 class="nav-home-logo-button"><a href="#/home">Д</a></h1>
-    <h1 class="nav-home-button"><a href="#/home">events</a></h1>
+    <h1 class="nav-home-logo-button"><a href="index.html">Д</a></h1>
+    <h1 class="nav-home-button"><a href="index.html">events</a></h1>
     <!-- <h1 class="nav-pages"><a href="#/home">Dinov ></a></h1> -->
     <!-- <button class="nav-pages"><img src="images/apple-store.png" alt="download on Apple Store"></button> -->
     <!-- <button class="nav-pages"></button> -->
@@ -61,7 +61,7 @@
     <div class="footer">
       <div class="btn-group">
         <h1 class="nav-pages"><a href="dinov.html">Dinov ></a></h1>
-        <h1 class="nav-pages"><a href="#/home">Commerces locaux ></a></h1>
+        <h1 class="nav-pages"><a href="business.html">Commerces locaux ></a></h1>
       </div>
     <!-- </div> -->
   
