--- a/business.html
+++ b/business.html
@@ -12,13 +12,15 @@
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="stylesDinov.css">
+  <link rel="stylesheet" href="stylesBusiness.css">
   <link href="https://fonts.googleapis.com/css?family=Exo+2:100,300,400,500&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
-  <!-- Full Page Image Header with Vertically Centered Content -->
+
+<!-- HEADER -->
+
 <header class="masthead">
   <div class="nav-wrapper">
     <h1 class="nav-home-logo-button"><a href="index.html">Д</a></h1>
@@ -26,15 +28,73 @@
     <button class="download"><img src="images/apple-store.png"></button>
   </div>
 
-  <h1 class="title">les plus exclusifs au monde</h1>
+  <div class="content-header">
+    <h2 class="paragraph-header">Fini les newsletters</h2>
+    <h1 class="title-header">Un programme de fidélité comme vous en n'avez jamais vu.</h1>
 
-  <h2 class="paragraph">Sortez, ouvrez l'app, découvrez votre ville.<br>
-    Les  commerçants vous invitent en temps réel.</h2>
+    <br><br>
 
-  <video class="video-header" autoplay muted loop>
-    <source src="videos/events.mp4" type="video/mp4">
+    <h2 class="paragraph-header-1">Proposez à vos habitués et aux habitants de votre ville des</h2>
+    <div class="carousel-frame">
+      <div class="mySlides">
+          <h1 class="sub-title-header">ventes privées</h1>
+          <img class="logo-map" src="images/logomapnoir.png" alt="Ventes privées">
+      </div>
+
+      <div class="mySlides">
+          <h1 class="sub-title-header">événéments spéciaux</h1>
+          <img class="logo-map" src="images/logomapred.png" alt="Événéments spéciaux">
+      </div>
+
+      <div class="mySlides">
+          <h1 class="sub-title-header">événéments privés</h1>
+          <img class="logo-map" src="images/logomapgold.png" alt="Événéments privés">
+      </div>
+    </div>
+  </div>
+
+  <video class="video-header" autoplay muted loop controls>
+      <source src="videos/events.mp4" type="video/mp4">
   </video>
 </header>
+
+<!-- PAGE CONTENT -->
+
+<div class="content-container">
+  <br>
+    <h2 class="paragraph">Le succès de votre commerce est basé sur les recommandations</h2>
+    <h1 class="title">Une action de communication gratuite et hyperciblée</h1>
+    <video class="video" autoplay muted loop controls>
+        <source src="videos/events.mp4" type="video/mp4">
+    </video>
+    <h2 class="paragraph-1">Une contrepartie obligatoire pour vos participants.<br>
+      Le partage d'une vidéo de votre événement, avec votre hashtag et votre localisation sur leurs réseaux sociaux.
+      <br><br>C'est action débloquera et validera l'offre promotionnelle donnée.</h2>
+  <br>
+</div>
+
+<div class="content-container-dark">
+  <br>
+    <h2 class="paragraph-dark">Plus rapide, plus impactant</h2>
+    <h1 class="title-dark">Créer un événement en 30 sec</h1>
+    <video class="video" autoplay muted loop controls>
+        <source src="videos/events.mp4" type="video/mp4">
+    </video>
+    <h2 class="paragraph-1-dark">Le manager ou vendeur créer l'événement, il représente votre enseigne auprès de notre communauté. Choisissez le commerce associé, les horaires, votre hasthtag et votre vidéo.</h2>
+  <br>
+</div>
+
+<div class="content-container">
+  <br>
+    <h2 class="paragraph">Hommes, femmes et enfants</h2>
+    <h1 class="title">La ville est réunie en Dinov</h1>
+    <video class="video" autoplay muted loop controls>
+        <source src="videos/events.mp4" type="video/mp4">
+    </video>
+    <h2 class="paragraph-1">Dinov réunie une communauté locale de consommateurs et vous en donne l'accès gratuitement à condition de créer chaque jour un nouvel événement.</h2>
+  <br>
+</div>
+
 
 
 
@@ -56,7 +116,35 @@
         </div>
       </div>
 
+<script>
+  var myIndex = 0;
+  carousel();
+  
+  function carousel() {
+    var i;
+    var x = document.getElementsByClassName("mySlides");
+    for (i = 0; i < x.length; i++) {
+      x[i].style.display = "none";  
+    }
+    myIndex++;
+    if (myIndex > x.length) {myIndex = 1}    
+    x[myIndex-1].style.display = "block";  
+    setTimeout(carousel, 2000); // Change image every 2 seconds
+  }
+  </script>
 
+  <script>
+    const [red, green, blue, alpha] = [0, 0, 50, 0.5]
+    const section1 = document.querySelector('.nav-wrapper')
+    
+    window.addEventListener('scroll', () => {
+      let y = 1 + (window.scrollY || window.pageYOffset)
+      y = y < 1 ? 1 : y
+      const [r, g, b] = [red/y, green/y, blue/y].map(Math.round)
+      // section1.style.backgroundColor = `rgb(${r}, ${g}, ${b})`
+      section1.style.backgroundColor = `rgb(0, 0, 50, 0.9)`
+    })
+  </script>
 </body>
 
 </html>
