--- a/dinov.html
+++ b/dinov.html
@@ -48,9 +48,12 @@
   <h2 class="paragraph">Sortez, ouvrez l'app, découvrez votre ville.<br>
     Les  commerçants vous invitent en temps réel.</h2>
 
-  <video class="video-header" autoplay muted loop>
+  <!-- <video class="video-header" autoplay muted loop>
     <source src="videos/events.mp4" type="video/mp4">
-  </video>
+  </video> -->
+  <video class="video-header" autoplay muted loop controls>
+      <source src="videos/events.mp4" type="video/mp4">
+    </video>
 </header>
 
 
