--- a/business.html
+++ b/business.html
@@ -60,6 +60,8 @@
 
 <!-- PAGE CONTENT -->
 
+<!-- <div class="main-page-container"> -->
+
 <div class="content-container">
   <br>
     <h2 class="paragraph">Le succès de votre commerce est basé sur les recommandations</h2>
@@ -95,7 +97,7 @@
   <br>
 </div>
 
-
+<!-- </div> -->
 
 
 
@@ -107,11 +109,11 @@
 <div class="footer">
         <div class="btn-group">
           <h1 class="nav-pages"><a href="dinov.html">Dinov ></a></h1>
-          <h1 class="nav-pages"><a href="#/home">Commerces locaux ></a></h1>
+          <h1 class="nav-pages"><a href="business.html">Commerces locaux ></a></h1>
         </div>
       
         <div class="btn-group">
-          <h1 class="nav-pages"><a href="#/home">Influenceurs ></a></h1>
+          <h1 class="nav-pages"><a href="influenceur.html">Influenceurs ></a></h1>
           <h1 class="nav-pages"><a href="#/home">Collectivités ></a></h1>
         </div>
       </div>
@@ -142,7 +144,8 @@
       y = y < 1 ? 1 : y
       const [r, g, b] = [red/y, green/y, blue/y].map(Math.round)
       // section1.style.backgroundColor = `rgb(${r}, ${g}, ${b})`
-      section1.style.backgroundColor = `rgb(0, 0, 50, 0.9)`
+      // section1.style.backgroundColor = `rgb(0, 0, 50, 0.9)`
+      section1.style.backgroundColor = `rgb(0, 0, 0, 0.9)`
     })
   </script>
 </body>
