--- a/index.html
+++ b/index.html
@@ -13,72 +13,48 @@
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Exo+2:100,300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Exo+2:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
-  <!-- Full Page Image Header with Vertically Centered Content -->
-  <header class="masthead">
+
+
+<header class="masthead">
   <div class="nav-wrapper">
-    <h1 class="nav-home-logo-button"><a href="index.html">Д</a></h1>
-    <h1 class="nav-home-button"><a href="index.html">events</a></h1>
-    <!-- <h1 class="nav-pages"><a href="#/home">Dinov ></a></h1> -->
-    <!-- <button class="nav-pages"><img src="images/apple-store.png" alt="download on Apple Store"></button> -->
-    <!-- <button class="nav-pages"></button> -->
+    <h1 class="nav-home-button"><a href="index.html">dinov events</a></h1>
     <button class="download"><img src="images/apple-store.png"></button>
   </div>
 
-  <div class="page-content">
-    <h1 class="title">Essayer le<br>shopping moderne</h1>
-    <!-- <video width="250" height="444" autoplay muted loop>
-        <source src="videos/events.mp4" type="video/mp4">
-      </video> -->
-      <video autoplay muted loop>
-          <source src="videos/events.mp4" type="video/mp4">
-        </video>
+<br><br><br><br>
+
+  <div class="app">
+    <h1 class="app-dinov-logo">Д</h1>
   </div>
+  <h1 class="app-name">dinov events</h1>
+<br><br>
+  <h1 class="title-header">Le shopping moderne</h1>
+<br>
+  <video class="video-header" autoplay muted loop controls>
+    <source src="videos/events.mp4" type="video/mp4">
+  </video>
 
-  <!-- <footer class="footer-group">
-    <h1 class="nav-pages"><a href="dinov.html">Dinov ></a></h1>
-    <h1 class="nav-pages"><a href="#/home">Commerces locaux ></a></h1>
-    <h1 class="nav-pages"><a href="#/home">Collectivités ></a></h1>
-    <h1 class="nav-pages"><a href="#/home">Influenceurs ></a></h1>
-  </footer> -->
-
-  <!-- <footer class="btn-group">
-      <h1 class="nav-pages"><a href="dinov.html">Dinov ></a></h1>
-      <h1 class="nav-pages"><a href="#/home">Commerces locaux ></a></h1>
-    </footer>
-
-    <footer class="btn-group" id="btngroup1">
-      <h1 class="nav-pages"><a href="#/home">Collectivités ></a></h1>
-      <h1 class="nav-pages"><a href="#/home">Influenceurs ></a></h1>
-    </footer> -->
-
-    <!-- ************** This works !!!!! -->
-
-    <div class="footer">
-      <div class="btn-group">
-        <h1 class="nav-pages"><a href="dinov.html">Dinov ></a></h1>
-        <h1 class="nav-pages"><a href="business.html">Commerces locaux ></a></h1>
-      </div>
-    <!-- </div> -->
-  
-      <!-- <div class="footer"> -->
-        <div class="btn-group">
-          <h1 class="nav-pages"><a href="#/home">Influenceurs ></a></h1>
-          <h1 class="nav-pages"><a href="#/home">Collectivités ></a></h1>
-        </div>
-      </div>
-
-    <!-- **************** -->
+<br><br><br><br>
 
 </header>
 
+<!-- Footer -->
+<div class="grid-container">
+    <div class="grid-item"><h1 class="nav-btn"><a href="dinov.html">Dinov ></a></h1></div>
+    <div class="grid-item"><h1 class="nav-btn"><a href="influenceur.html">Influenceurs ></a></h1></div>
+    <div class="grid-item"><h1 class="nav-btn"><a href="commerces-locaux.html">Commerçants ></a></h1></div>
+    <div class="grid-item"><h1 class="nav-btn"><a href="collectivites.html">Collectivités ></a></h1></div>
+</div>
+
+
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.slim.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- <script src="vendor/jquery/jquery.slim.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script> -->
 
 </body>
 
